--- a/index.html
+++ b/index.html
@@ -1,359 +1,7 @@
 <html><head><base href="https://animals.encyclopedia/insects">
 <title>Insects - Animal Encyclopedia</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f8ff;
-    color: #333;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  .header {
-    background-color: #4a7c59;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-  }
-  .logo {
-    font-size: 2em;
-    margin-bottom: 10px;
-  }
-  .tagline {
-    font-style: italic;
-  }
-  .nav {
-    background-color: #78a58c;
-    padding: 10px 0;
-  }
-  .nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .nav li {
-    margin: 0 15px;
-  }
-  .nav a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    flex: 1;
-  }
-  .intro {
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  .insect-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-  }
-  .insect-card {
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease;
-  }
-  .insect-card:hover {
-    transform: translateY(-5px);
-  }
-  .insect-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 5px;
-    margin-bottom: 10px;
-  }
-  .fun-fact {
-    background-color: #fff0f5;
-    border-left: 5px solid #ff69b4;
-    padding: 10px;
-    margin-top: 10px;
-    font-style: italic;
-  }
-  .audio-button {
-    background-color: #4a7c59;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-    transition: background-color 0.3s ease;
-  }
-  .audio-button:hover {
-    background-color: #3d6b4a;
-  }
-  .back-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #4a7c59;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 5px;
-    text-decoration: none;
-    opacity: 0.7;
-    transition: opacity 0.3s ease;
-  }
-  .back-to-top:hover {
-    opacity: 1;
-  }
-  .insect-animation {
-    position: absolute;
-    font-size: 24px;
-    animation: fly 15s linear infinite;
-  }
-  @keyframes fly {
-    0% { top: 100%; left: -10%; }
-    25% { top: 50%; left: 25%; }
-    50% { top: 10%; left: 50%; }
-    75% { top: 50%; left: 75%; }
-    100% { top: 100%; left: 110%; }
-  }
-  .species-list {
-    background-color: #e6f3ff;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  .species-list h2 {
-    color: #4a7c59;
-    margin-bottom: 20px;
-  }
-  .species-list ul {
-    columns: 3;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  .species-list li {
-    margin-bottom: 10px;
-    padding: 8px;
-    background-color: #ffffff;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  .species-list li:hover {
-    background-color: #f0f8ff;
-  }
-  .species-list .view-more {
-    display: block;
-    width: 200px;
-    margin: 20px auto 0;
-    padding: 10px;
-    background-color: #4a7c59;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  .species-list .view-more:hover {
-    background-color: #3d6b4a;
-  }
-  .fun-facts-carousel {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    text-align: center;
-  }
-  .fun-facts-carousel h2 {
-    color: #4a7c59;
-  }
-  #fun-fact-display {
-    font-style: italic;
-    margin: 20px 0;
-    min-height: 60px;
-  }
-  .interactive-quiz {
-    background-color: #f0e68c;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  .interactive-quiz h2 {
-    color: #4a7c59;
-  }
-  #quiz-question {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  #quiz-options {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-  }
-  #quiz-options button {
-    padding: 10px;
-    background-color: #4a7c59;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  #quiz-options button:hover {
-    background-color: #3d6b4a;
-  }
-  #quiz-result {
-    margin-top: 20px;
-    font-weight: bold;
-  }
-  #quiz-timer {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  #next-question, #show-hint {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #4a7c59;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  #next-question:hover, #show-hint:hover {
-    background-color: #3d6b4a;
-  }
-  #quiz-hint {
-    margin-top: 10px;
-    font-style: italic;
-    color: #666;
-  }
-  .footer {
-    background-color: #4a7c59;
-    color: white;
-    padding: 40px 0;
-    margin-top: 50px;
-  }
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-  .footer-section {
-    flex: 1;
-    margin-right: 40px;
-  }
-  .footer-section:last-child {
-    margin-right: 0;
-  }
-  .footer h3 {
-    margin-bottom: 20px;
-    font-size: 20px;
-    border-bottom: 2px solid #78a58c;
-    padding-bottom: 10px;
-  }
-  .footer ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  .footer li {
-    margin-bottom: 10px;
-  }
-  .footer a {
-    color: #ffffff;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  .footer a:hover {
-    color: #f0e68c;
-  }
-  .social-icons {
-    display: flex;
-    gap: 15px;
-  }
-  .social-icons a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 40px;
-    color: #4a7c59;
-    font-size: 20px;
-    transition: transform 0.3s ease, background-color 0.3s ease;
-  }
-  .social-icons a:hover {
-    transform: scale(1.1);
-    background-color: #f0e68c;
-  }
-  .footer-bottom {
-    text-align: center;
-    margin-top: 30px;
-    padding-top: 20px;
-    border-top: 1px solid #78a58c;
-  }
-  .nav-icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
-    vertical-align: middle;
-  }
-  .subscribe-form {
-    display: flex;
-    margin-top: 20px;
-  }
-  .subscribe-form input[type="email"] {
-    flex-grow: 1;
-    padding: 10px;
-    border: none;
-    border-radius: 5px 0 0 5px;
-  }
-  .subscribe-form button {
-    padding: 10px 20px;
-    background-color: #f0e68c;
-    color: #4a7c59;
-    border: none;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  .subscribe-form button:hover {
-    background-color: #e6dc82;
-  }
-  .view-more-insects {
-    display: block;
-    width: 200px;
-    margin: 20px auto 0;
-    padding: 10px;
-    background-color: #4a7c59;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  .view-more-insects:hover {
-    background-color: #3d6b4a;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
   <header class="header">
@@ -658,4 +306,5 @@ loadQuestion();
 showNextFact();
 </script>
 
+<script src="app.js"></script>
 </body></html>
